tests/snapshots/options__opt_nth_neg_4@002.snap
---
source: tests/options.rs
description: "input: items [\"f1,f2,f3,f4\"]\noptions: --delimiter , --nth=-4\nafter:\n  @char '1'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> f1,f2,f3,f4                                                                   "
"  1/1                                                                        0/0"
"> 1                                                                             "
cursor: (24, 4)
