tests/snapshots/options__opt_nth_neg_4@004.snap
---
source: tests/options.rs
description: "input: items [\"f1,f2,f3,f4\"]\noptions: --delimiter , --nth=-4\nafter:\n  @char '2'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 2                                                                             "
cursor: (24, 4)
